Second commit main index changed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged Retreat</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -29,6 +29,191 @@
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
+
+<header>
+
+</header>
+
+  <div class="content-wrapper">
+
+    <a href="#"><img src="" alt="unplugged logo"></a> <!---FAQ and About start --->
+
+    <div class="header-divider"></div>
+
+    <nav>
+
+      <ul>
+
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target=_blank>ABOUT</a></li>
+
+      </ul>
+
+    </nav>
+
+  </div>  <!--faq and about end-->
+
+</header>
+
+<main>
+
+  <section class="hero-section">
+
+      <div class="main-image"> <!--image of hero starts-->
+
+            <div class="main-title"> <!--main title begins--->
+
+       <p>Retreat from the desk, return refreshed.</p>
+
+     </div> <!--main title ends-->
+
+  </section>  <!---end of hero ends--->
+
+
+  <aside>
+
+    <div class="button-text"> <!--button text starts-->
+
+      <p>Want to join the next retreat?</p>
+
+      <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+
+      <p>Find out more</p>
+
+    </div> <!--button text ends-->
+
+    <div class="button"> <!---sign-up form and button start-->
+
+      <input type="text" name="name" value="email address">
+      <input type="buttom" value="Download Itinerary">
+
+    </div>
+
+    <div class="itinerary">
+
+      <p>DOWNLOAD ITINERARY</P>
+
+    </div> <!---sign-up form and button end -->
+
+  </aside>
+
+  <section="top-section">
+
+      <div>
+        <p>Have the work week you always dreamed of - without the bad wifi.</p>
+      </div>
+
+      <div>   <!--teepee-->
+        <p>located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+      </div>
+
+      <div> <!--bed-->
+        <p>12 private with bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+      </div>
+
+      <div>  <!--knife and fork-->
+        <p>Private chef team providing on demand meals - just like your team kitchen.</p>
+      </div>
+
+      <div>  <!--footprints-->
+        <p>5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
+      </div>
+
+      <div> <!--smiley face-->
+        <p>Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+      </div>
+
+      <div>  <!--wifi-->
+        <p>Dedicated computer room for times you must wifi</p>
+      </div>
+
+  </section> <!---end of top section-->
+
+  <section class="bottom-section">
+      <!--green group class section starts-->
+
+
+      <div class="group-main-title">  <!--group header text starts-->
+
+            <h2>Be a better team in 5 days, like these.</h2>
+
+      </div> <!--group title text-->
+
+
+      <div class="group-image"><img src="img/download.jpg" alt="group shot" /></div>
+            <!--green group section starts-->
+
+      </div>  <!--group image ends-->
+
+      <div class="intro">  <!--LaCrue Bottling Co.-->
+
+<h3>LaCrue Bottling Co.</h3>
+<h3>October 2017</h3>
+<p>This is The LaCrue Bottling Company who had their
+  retreat here in our beautiful Wisconsin countryside.
+  Our staff includes your very own personal Falicitator
+to help achieve your companies staff objectives for
+interpersonal trust and comminuication goals.
+Please join us so we can help you with any issues
+your company has, or just to build your staffs confidience
+and trust levels.</p>
+
+      </div>
+
+</main>
+
+<footer>
+
+  <div class="content-wrapper">  <!--beginning of content-wrapper-->
+
+        <div class="footer-content"> <!--beginning of foot content-->
+
+              <div class="contact"> <!---start of contact-->
+
+                    <address>  <!---beginning of address -->
+
+                        <p>Contact</p>
+                        <p>555-555-5555</p>
+                        <p>hello@unplugged.com</p>
+
+                    </address>  <!--endo address-->
+
+                </div>  <!--end of contact-->
+
+        </div>  <!--end of footer-content-->
+
+          <div class="social"> <!--Social starts-->
+                          <p>Social</p>
+                <div class="social-icons"> <!--social icons starts-->
+
+                     <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+                      <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
+                      <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
+                    <!--other social links here -->
+
+                </div> <!--social icons ends--->
+
+            </div>  <!---social ends --->
+
+      </div> <!-- footer-content ends -->
+
+   <div class="copyright"> <!---copyright starts-->
+
+     <p>Copyright 2019 | Unplugged</p>
+
+   </div>                   <!--copyright ends--->
+
+</footer>
+
+
+
+
+
+
+
+
+
+
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
