--- a/about/index.html
+++ b/about/index.html
@@ -5,16 +5,11 @@
 
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Unplugged</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta property="og:title" content="">
-    <meta property="og:type" content="">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
-
-    <link rel="manifest" href="../site.webmanifest">
+      <link rel="manifest" href="../site.webmanifest">
     <link rel="apple-touch-icon" href="../icon.png">
     <!-- Place favicon.ico in the root directory -->
 
@@ -26,18 +21,128 @@
 
   <body>
 
-    <!-- Add your site or application content here -->
-    <p>Hello world! This is HTML5 Boilerplate.</p>
-    <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
-    <script src="../js/plugins.js"></script>
-    <script src="../js/main.js"></script>
+    <header>
 
-    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-    <script>
-      window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-      ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-    </script>
-    <script src="https://www.google-analytics.com/analytics.js" async></script>
+      <div class="content-wrapper">
+
+        <a href="#"><img src="" alt="unplugged logo"></a> <!---FAQ and About start --->
+
+        <div class="header-divider"></div>
+
+        <nav>
+
+          <ul>
+
+              <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+              <li><a href="#">ABOUT</a></li>
+
+          </ul>
+
+        </nav> <!--nav ending-->
+
+      </div>  <!--Header-divider ending-->
+
+    </header>
+
+  <main>
+    <section class="mission">
+        <div class="content-wrapper">
+            <div class="mission-content">
+                <h1>Our Mission - we want to make
+                  you the team you always wanted to
+                  be.</h1>
+
+            <p>It is our mission to provide
+              companies and all types of groups
+              an personalized environment for their
+              personalized team growth experience.
+              We have be awarded several
+              certifications and are know to be
+              the best in the business of bringing people
+              together, making them stronger.</p>
+
+              <p>Let us do the same for you, whatever
+                the issues are that you are trying to
+                overcome, let us be there for you.</p>
+
+
+            </div> <!--end mission content-->
+        </div> <!--end content wrapper-->
+    </section>
+
+<section class="map">
+      <figure>
+
+      </figure>  <!--end of figure-->
+
+</section>   <!--end of map section-->
+
+<section class="contact-section">
+
+    <div class="content-wrapper"> <!--content-wrapper-->
+      <div>
+        <h1>Contact us, because you all need this.</h1>
+
+        <h3>General Information</h3>
+
+        <p>333 Main St., Lake Geneva, WI 53147</p>
+        <p>555-555-5555</p>
+        <p>hello@unplugged.com</p>
+    </div>
+
+    <div>
+        <h3>Chat with a Facilitator</h3>
+
+        <p>555-55-5555</p>
+        <p>Facilitator@unplugged.com</p>
+
+    </div>
+  </div> <!--end content-wrapper-->
+</section> <!---end contact section-->
+
+    <footer>
+
+      <div class="content-wrapper">  <!--beginning of content-wrapper-->
+
+            <div class="footer-content"> <!--beginning of foot content-->
+
+                  <div class="contact"> <!---start of contact-->
+
+                        <address>  <!---beginning of address -->
+
+                            <p>Contact</p>
+                            <p>555-555-5555</p>
+                            <p>hello@unplugged.com</p>
+
+                        </address>  <!--endo address-->
+
+                    </div>  <!--end of contact-->
+
+            </div>  <!--end of footer-content-->
+
+              <div class="social"> <!--Social starts-->
+                              <p>Social</p>
+                    <div class="social-icons"> <!--social icons starts-->
+
+                         <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+                          <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
+                          <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
+                        <!--other social links here -->
+
+                    </div> <!--social icons ends--->
+
+                </div>  <!---social ends --->
+
+          </div> <!-- footer-content ends -->
+
+       <div class="copyright"> <!---copyright starts-->
+
+         <p>Copyright 2019 | Unplugged</p>
+
+       </div>                   <!--copyright ends--->
+
+    </footer>
+
   </body>
 
   </html>
