--- a/index.html
+++ b/index.html
@@ -3,21 +3,17 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Unplugged Retreat</title>
+  <title>Unplugged</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="..css/normalize.css">
+  <link rel="stylesheet" href="..css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -26,13 +22,7 @@
 
   <!-- Add your site or application content here -->
 
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
-
 <header>
-
-</header>
 
   <div class="content-wrapper">
 
@@ -44,8 +34,8 @@
 
       <ul>
 
-          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target=_blank>ABOUT</a></li>
+          <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="../about/index.html" target=_blank>ABOUT</a></li>
 
       </ul>
 
@@ -230,12 +220,7 @@ and trust levels.</p>
 
 
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+
 </body>
 
 </html>
