Faq page changed

--- a/about/index.html
+++ b/about/index.html
@@ -69,8 +69,8 @@
             </div> <!--end mission content-->
         </div> <!--end content wrapper-->
     </section>
-
-<section class="map">
+</main>
+    <section class="map">
       <figure>
 
       </figure>  <!--end of figure-->
