--- a/faq/index.html
+++ b/faq/index.html
@@ -5,14 +5,10 @@
 
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Unplugged</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta property="og:title" content="">
-    <meta property="og:type" content="">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
 
     <link rel="manifest" href="../site.webmanifest">
     <link rel="apple-touch-icon" href="../icon.png">
@@ -21,23 +17,120 @@
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/main.css">
 
-    <meta name="theme-color" content="#fafafa">
+
   </head>
 
   <body>
 
-    <!-- Add your site or application content here -->
-    <p>Hello world! This is HTML5 Boilerplate.</p>
-    <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
-    <script src="../js/plugins.js"></script>
-    <script src="../js/main.js"></script>
+    <header>
 
-    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-    <script>
-      window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-      ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-    </script>
-    <script src="https://www.google-analytics.com/analytics.js" async></script>
+      <div class="content-wrapper">  <!--Unplugged logo & About & Faq start--->
+
+        <a href="#"><img src="" alt="unplugged logo"></a> <!---Unplugged logo --->
+
+        <div class="header-divider"></div>
+
+        <nav>
+
+          <ul>
+
+              <li><a href="../faq/index.html" target="_blank">FAQ</a></li> <!--FAQ & About--->
+              <li><a href="#">ABOUT</a></li>
+
+          </ul>
+
+        </nav> <!--nav ending-->
+
+      </div>  <!--Header-divider ending-->
+
+    </header>
+
+      <section class="faq-section">
+
+
+        <h1>Frequently Asked Questions</h1>
+
+        <h3>How do I get to the Unplugged Retreat?</h3>
+
+        <p>From the airport, you will dispatched to our
+          halfway point where you will take donkeys
+          onlong the base of the Redfeather Monutain,
+          taking in the exquisite beauty of the Colorado
+          River. From there you will be hoisted individually
+          past the Crazydogs caverns up to Standing Bear Cliff
+          (its only a 150 drop) finally you'll take the 3.5
+           miles down the snakelike Wildwoman road to our
+           retreat.</p>
+
+        <h3>What kind of team is right for the Unplugged Retreat?</h3>
+
+             <p>If you have people willing to find their hidden
+               abilities and push them to their limits, you
+               belong at our retreat.</p>
+
+
+        <h3>What size teams can you accommodate?</h3>
+
+            <P>Choose and check in to a variety of
+               accommodations for intimate getaways or
+                large gatherings of up to 500 guests,
+                located on 240 acres of Utah ranchland.
+                Then fill every moment with adventure,
+                discovery, or nothing at all. Our accommodations
+                come along with delightful surprises for a
+                wonderful experience.
+
+        <h3>Is there really no wifi available?</h3>
+
+        <p>This digital detox offers you an opportunity
+           to disconnect from your devices and connect
+            with nature, your team and your combined
+             abilities.</p>
+
+
+    <footer>
+
+      <div class="content-wrapper">  <!--beginning of content-wrapper-->
+
+            <div class="footer-content"> <!--beginning of foot content-->
+
+                  <div class="contact"> <!---start of contact-->
+
+                        <address>  <!---beginning of address -->
+
+                            <p>Contact</p>
+                            <p>555-555-5555</p>
+                            <p>hello@unplugged.com</p>
+
+                        </address>  <!--endo address-->
+
+                    </div>  <!--end of contact-->
+
+            </div>  <!--end of footer-content-->
+
+              <div class="social"> <!--Social starts-->
+                              <p>Social</p>
+                    <div class="social-icons"> <!--social icons starts-->
+
+                         <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+                          <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
+                          <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
+                        <!--other social links here -->
+
+                    </div> <!--social icons ends--->
+
+                </div>  <!---social ends --->
+
+          </div> <!-- footer-content ends -->
+
+       <div class="copyright"> <!---copyright starts-->
+
+         <p>Copyright 2019 | Unplugged</p>
+
+       </div>                   <!--copyright ends--->
+
+    </footer>
+
   </body>
 
   </html>
