First Changes to CSS

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <aside>
 
-    <div class="form-description"> <!--button text starts-->
+    <div class="form-description"> <!--form description starts----->
 
       <p>Want to join the next retreat?</p>
 
@@ -70,14 +70,14 @@
 
       <p>Find out more</p>
 
-    </div> <!--button text ends-->
+    </div> <!--form description ends-->
 
-    <div class="form"> <!---newsletter sign-up form start-->
+    <div class="form"> <!---email box called form starts-->
 
       <input type="text" name="name" value="email address">
       <input type="buttom" value="Download Itinerary">
 
-    </div>
+    </div> <!--email box and download itinerary ends-->
 
     <div class="itinerary">
 
