Added widths and margins, corrected html names

--- a/about/index.html
+++ b/about/index.html
@@ -120,7 +120,7 @@
 
             </div>  <!--end of footer-content-->
 
-              <div class="social"> <!--Social starts-->
+              <div class="social-icons"> <!--Social starts-->
                               <p>Social</p>
                     <div class="social-icons"> <!--social icons starts-->
 
