--- a/faq/index.html
+++ b/faq/index.html
@@ -34,8 +34,8 @@
 
           <ul>
 
-              <li><a href="../faq/index.html" target="_blank">FAQ</a></li> <!--FAQ & About--->
-              <li><a href="#">ABOUT</a></li>
+              <li><a href="../about/index.html" target="_blank">FAQ</a></li> <!--FAQ & About--->
+              <li><a href="#">FAQ</a></li>
 
           </ul>
 
@@ -87,7 +87,7 @@
             with nature, your team and your combined
              abilities.</p>
 
-
+      </section>  <!---end of faq-section-->
     <footer>
 
       <div class="content-wrapper">  <!--beginning of content-wrapper-->
