--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 
     </div> <!--form description ends-->
 
-    <div class="form"> <!---email box called form starts-->
+    <div class="form"> <!---the newsletter signup form-->
 
       <input type="text" name="name" value="email address">
       <input type="buttom" value="Download Itinerary">
 
-    </div> <!--email box and download itinerary ends-->
+    </div> <!--newsletter signup form ends-->
 
     <div class="itinerary">
 
@@ -89,48 +89,50 @@
 
   <section class="features">
 
-    <div class="content-wrapper">
-  <!--Add your features content here-->
+    <div class="content-wrapper"> <!--Add your features content here-->
+      <section class="features-items">  <!---Start of Features-items-->
+          <div> <!--header-->
+            <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+          </div>
+
+
+          <article>
+            <p class="fontawesome-icon"></p>  <!--teepee-->
+            <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+          </article>
+
+          <article> <!--bed-->
+            <p class="fontawesome-icon"></p>
+            <p class="features-item-description">12 private with bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+          </article>
+
+          <article>
+            <p class="fontawesome-icon"></p>  <!--knife and fork-->
+            <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
+          </article>
+
+          <article>
+            <p class="fontawesome-icon"></p>  <!--footprints-->
+            <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
+          </article>
+
+          <article>
+            <p class="fontawesome-icon"></p><!--smiley face-->
+            <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
+          </article>
+
+          <article>
+            <p class="fontawesome-icon"></p>  <!--wifi-->
+            <p class="features-item-description">Dedicated computer room for times you must wifi</p>
+          </article>
+
+       </section>
+
+    </div>  <!--end of content-wrapper-->
+
 </section>
-  <section class="features-items">  <!---Start of Features-items-->
-      <div> <!--header-->
-        <p>Have the work week you always dreamed of - without the bad wifi.</p>
-      </div>
 
 
-      <article>
-        <p class="fontawesome-icon"></p>  <!--teepee-->
-        <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
-      </article>
-
-      <article> <!--bed-->
-        <p class="fontawesome-icon"></p>
-        <p class="features-item-description">12 private with bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
-      </article>
-
-      <article>
-        <p class="fontawesome-icon"></p>  <!--knife and fork-->
-        <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
-      </article>
-
-      <article>
-        <p class="fontawesome-icon"></p>  <!--footprints-->
-        <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
-      </article>
-
-      <article>
-        <p class="fontawesome-icon"></p><!--smiley face-->
-        <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to reset.</p>
-      </article>
-
-      <article>
-        <p class="fontawesome-icon"></p>  <!--wifi-->
-        <p class="features-item-description">Dedicated computer room for times you must wifi</p>
-      </article>
-
-    </div> <!--end of content-wrapper-->
-
-  </section> <!---end of features section-->
 
   <section class="reviews">
       <!--reviews starts-->
@@ -141,7 +143,7 @@
 
       </div> <!--content-wrapper-->
 
-    <article>
+
 
       <div class="group-image"><img src="img/download.jpg" alt="group shot" /></div>
             <!--green group section starts-->
@@ -163,17 +165,18 @@ and trust levels.</p>
 
        </div>
 
-     </article>
-    </section>
-</main>
 
-<footer>
+    </section>  <!---end of review section-->
+</main>  <!--end of main-->
+
+<footer>   <!--beginning of footer -->
 
   <div class="content-wrapper">  <!--beginning of content-wrapper-->
 
         <div class="footer-content"> <!--beginning of foot content-->
 
-              <div class="contact"> <!---start of contact-->
+
+              <div class="contact"> <!---start of contact??????--->
 
                     <address>  <!---beginning of address -->
 
@@ -208,17 +211,7 @@ and trust levels.</p>
 
    </div>                   <!--copyright ends--->
 
-</footer>
-
-
-
-
-
-
-
-
-
-
+</footer>  <!---end of footer-->
 
 
 </body>
