Tablet code not finished

--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Unplugged</title>
+    <title>Unplugged About</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -47,10 +47,15 @@
   <main>
     <section class="mission">
         <div class="content-wrapper">
-            <div class="mission-content">
+            <div class="mission-content">   <!--start of mission header --->
+
+              <div class="mission-content">   <!---start of mission content header-->
                 <h1>Our Mission - we want to make
                   you the team you always wanted to
                   be.</h1>
+              </div>                        <!--end of mission content header-->
+
+            <div class="mission-content">  <!--start of mission content one -->
 
             <p>It is our mission to provide
               companies and all types of groups
@@ -61,14 +66,19 @@
               the best in the business of bringing people
               together, making them stronger.</p>
 
+            </div>                            <!--end of mission content one-->
+
+              <div class="mission-content">  <!--start of mission content two-->
+
               <p>Let us do the same for you, whatever
                 the issues are that you are trying to
                 overcome, let us be there for you.</p>
 
+              </div>                        <!--end of mission content two-->
 
             </div> <!--end mission content-->
         </div> <!--end content wrapper-->
-    </section>
+    </section>  <!---end of mission section--->
 </main>
     <section class="map">
       <figure>
