--- a/faq/index.html
+++ b/faq/index.html
@@ -1,11 +1,9 @@
-/faq/
-  -index.html
   <!doctype html>
   <html class="no-js" lang="">
-
+   /* FAQ page  */
   <head>
     <meta charset="utf-8">
-    <title>Unplugged</title>
+    <title>Unplugged Faq</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -45,8 +43,8 @@
 
     </header>
 
-      <section class="faq-section">
-
+      <section class="faq">
+        <div class="content-wrapper"> <!--beginning of faq on faq page-->
 
         <h1>Frequently Asked Questions</h1>
 
@@ -58,7 +56,7 @@
           taking in the exquisite beauty of the Colorado
           River. From there you will be hoisted individually
           past the Crazydogs caverns up to Standing Bear Cliff
-          (its only a 150 drop) finally you'll take the 3.5
+          (its only a 150 feet drop) finally you'll take the 3.5
            miles down the snakelike Wildwoman road to our
            retreat.</p>
 
@@ -86,7 +84,7 @@
            to disconnect from your devices and connect
             with nature, your team and your combined
              abilities.</p>
-
+        </div>  <!-- content wrapper in faq page ending-->
       </section>  <!---end of faq-section-->
     <footer>
 
