--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Unplugged</title>
+  <title>Unplugged home</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -12,8 +12,8 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="..css/normalize.css">
-  <link rel="stylesheet" href="..css/main.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -30,7 +30,7 @@
 
     <div class="header-divider"></div>
 
-    <nav>
+    <nav>   <!---beginning of faq and about --->
 
       <ul>
 
@@ -53,7 +53,7 @@
 
             <div class="main-title"> <!--main title begins--->
 
-       <p>Retreat from the desk, return refreshed.</p>
+       <h1>Retreat from the desk, return refreshed.</h1>
 
      </div> <!--main title ends-->
 
@@ -64,11 +64,14 @@
 
     <div class="form-description"> <!--form description starts----->
 
-      <p>Want to join the next retreat?</p>
 
-      <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+      <h3>Want to join the next retreat?</h3>
 
-      <p>Find out more</p>
+      <h6>Find out when we are holding our next retreat and how your company or team can sign up!</h6>
+
+
+      <h2>Find out more</h2>
+     
 
     </div> <!--form description ends-->
 
@@ -78,6 +81,8 @@
       <input type="buttom" value="Download Itinerary">
 
     </div> <!--newsletter signup form ends-->
+
+<!--end of second half of form ->
 
     <div class="itinerary">
 
